登录和注册的切换完成

--- a/login.html
+++ b/login.html
@@ -73,8 +73,11 @@
                 <button class="layui-btn layui-btn-normal  layui-btn-fluid" lay-submit lay-filter="formDemo">注 册</button>
 
             </div>
-            <div class="go">
+            <div class="layui-form-item">
+
+
                 <a href="javascript:;">去登录</a>
+
             </div>
         </form>
     </div>
