--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="text" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
 
             </div>
 
@@ -52,13 +52,13 @@
         <form class="layui-form myForm" action="">
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-username"></i>
-                <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
 
             </div>
 
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="text" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="password" name="pass" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
 
             </div>
 
@@ -90,7 +90,7 @@
 
 
     <script src="./assets/lib/jquery.js"></script>
-    <script src="./assets/lib/layui/layui.js"></script>
+    <script src="./assets/lib/layui/layui.all.js"></script>
     <script src="./assets/js/login.js"></script>
 </body>
 
