--- a/login.html
+++ b/login.html
@@ -52,19 +52,19 @@
         <form class="layui-form myForm" action="">
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-username"></i>
-                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                <input type="text" name="username" required lay-verify="required|username" placeholder="请输入用户名" autocomplete="off" class="layui-input">
 
             </div>
 
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="password" name="pass" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="password" name="pass" required lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
 
             </div>
 
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="password" required lay-verify="required" placeholder="再次确认密码" autocomplete="off" class="layui-input">
+                <input type="password" required lay-verify="required|repass" placeholder="再次确认密码" autocomplete="off" class="layui-input">
 
             </div>
 
