--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
     </div>
     <script src="./assets/lib/jquery.js "></script>
     <script src="./assets/lib/layui/layui.all.js "></script>
-    <script src="./assets/js/index.js "></script>
+    <script src="./assets/js/utils.js"></script>
+    <script src="./assets/js/index.js"></script>
 
 </body>
 
