子页面切换已完成

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                         </a>
                         <dl class="layui-nav-child ">
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./article/article_classify.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 文章类别
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./article/article_list.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 文章列表
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./article/article.release.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 发表文章
                                 </a>
                             </dd>
@@ -83,17 +83,17 @@
                         </a>
                         <dl class="layui-nav-child ">
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./user/user_info.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 基本资料
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./user/user_avatar.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 更换头像
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:; ">
+                                <a href="./user/user_pass.html" target='main_iframe'>
                                     <i class="layui-icon layui-icon-app "></i> 重置密码
                                 </a>
                             </dd>
@@ -105,7 +105,7 @@
 
         <div class="layui-body ">
             <!-- 内容主体区域 -->
-            <div style="padding: 15px; ">内容主体区域</div>
+            <iframe src="./home/dashboard.html" name='main_iframe' width="100%" height="100%" frameborder="0"></iframe>
         </div>
 
         <div class="layui-footer heimafooter ">
@@ -113,6 +113,7 @@
             © www.itheima.com - 黑马程序员
         </div>
     </div>
+
     <script src="./assets/lib/jquery.js "></script>
     <script src="./assets/lib/layui/layui.all.js "></script>
     <script src="./assets/js/utils.js"></script>
