个人资料和重置密码完成，更换头像结构完成

--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -5,10 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="../assets/lib/cropper/cropper.css">
+    <link rel="stylesheet" href="../assets/css/user/user_avatar.css">
 </head>
 
 <body>
-    <h1>头像修改</h1>
+    <div class="layui-card">
+        <div class="layui-card-header">更换头像</div>
+        <div class="layui-card-body">
+            <div class="avatar-top">
+                <div class="cropper-box">
+                    <img id='image' src="../assets/images/sample.jpg" alt="">
+                </div>
+                <div class="preview-box">
+
+                    <div>
+                        <!-- 100*100的预览区域 -->
+                        <div class="img-preview w100"></div>
+                        <p>100 x 100</p>
+                    </div>
+                    <div>
+                        <!-- 100*100的预览区域 -->
+                        <div class="img-preview w50"></div>
+                        <p>50 x 50</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="avatar-bottom">
+                <button type="button" class="layui-btn btn-upload">上传</button>
+                <button type="button" class="layui-btn layui-btn-danger btn-sure">确定</button>
+            </div>
+        </div>
+    </div>
+    <script src="../assets/lib/jquery.js"></script>
+    <script src="../assets/lib/cropper/Cropper.js"></script>
+    <script src="../assets/lib/cropper/jquery-cropper.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/js/utils.js"></script>
+    <script src="../assets/js/user/user_avatar.js"></script>
 </body>
 
 </html>
