--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <dd><a href="">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item">
+                <li class="layui-nav-item logout">
                     <a href="javascript:;">
                         <i class="layui-icon layui-icon-logout"></i> 退出
                     </a>
