--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -35,6 +35,7 @@
 
 
             <div class="avatar-bottom">
+                <input type="file" id='avatar' style='display:none;'>
                 <button type="button" class="layui-btn btn-upload">上传</button>
                 <button type="button" class="layui-btn layui-btn-danger btn-sure">确定</button>
             </div>
