--- a/article/article_classify.html
+++ b/article/article_classify.html
@@ -5,10 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="../assets/css/article/article.classify.css">
 </head>
 
 <body>
-    <h1>文章分类</h1>
+    <div class="layui-card">
+        <div class="layui-card-header">
+            <span>文章类别管理</span>
+            <button type="button" class="layui-btn layui-btn-normal layui-btn-sm">添加类别</button>
+        </div>
+        <div class="layui-card-body">
+            <table class="layui-table">
+                <colgroup>
+                    <col>
+                    <col width="200">
+                    <col width="200">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>分类名称</th>
+                        <th>分类别名</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>贤心</td>
+                        <td>2016-11-29</td>
+                        <td>
+                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>许闲心</td>
+                        <td>2016-11-28</td>
+                        <td>
+                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script type='text/html' id='categoryList'>
+        {{each data value index}}
+        <tr>
+            <td>{{value.name}}</td>
+            <td>{{value.alias}}</td>
+            <td>
+                <button type="button" data-id='Id' class="layui-btn layui-btn-xs">编辑</button>
+                <button type="button" data-id='Id' class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script src="../assets/lib/jquery.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/template-web.js"></script>
+    <script src="../assets/js/utils.js"></script>
+    <script src="../assets/js/article/article.classify.js"></script>
 </body>
 
 </html>
