--- a/article/article_classify.html
+++ b/article/article_classify.html
@@ -13,7 +13,7 @@
     <div class="layui-card">
         <div class="layui-card-header">
             <span>文章类别管理</span>
-            <button type="button" class="layui-btn layui-btn-normal layui-btn-sm">添加类别</button>
+            <button type="button" class="layui-btn layui-btn-normal layui-btn-sm btn-add">添加类别</button>
         </div>
         <div class="layui-card-body">
             <table class="layui-table">
@@ -34,16 +34,16 @@
                         <td>贤心</td>
                         <td>2016-11-29</td>
                         <td>
-                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                            <button type="button" class="layui-btn layui-btn-xs btn-edit">编辑</button>
+                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete">删除</button>
                         </td>
                     </tr>
                     <tr>
                         <td>许闲心</td>
                         <td>2016-11-28</td>
                         <td>
-                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                            <button type="button" class="layui-btn layui-btn-xs btn-edit">编辑</button>
+                            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete">删除</button>
                         </td>
                     </tr>
                 </tbody>
@@ -57,11 +57,63 @@
             <td>{{value.name}}</td>
             <td>{{value.alias}}</td>
             <td>
-                <button type="button" data-id='Id' class="layui-btn layui-btn-xs">编辑</button>
-                <button type="button" data-id='Id' class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                <button type="button" data-id="{{value.Id}}" class="layui-btn layui-btn-xs btn-edit">编辑</button>
+                <button type="button" data-id="{{value.Id}}" class="layui-btn layui-btn-danger layui-btn-xs btn-delete">删除</button>
             </td>
         </tr>
         {{/each}}
+    </script>
+
+    <script type='text/html' id='add'>
+
+        <form class="layui-form myForm addForm">
+
+            <div class="layui-form-item">
+                <label class="layui-form-label">分类名称</label>
+                <div class="layui-input-block">
+                    <input type="text" name="name" required lay-verify="required|username" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">分类别名</label>
+                <div class="layui-input-block">
+                    <input type="text" name="alias" required lay-verify="required|username" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+
+                <div class="layui-input-block">
+                    <button lay-submit class="layui-btn">确认添加</button>
+                    <button type="reset" class="layui-btn  layui-btn-primary">重置</button>
+                </div>
+            </div>
+        </form>
+    </script>
+
+    <script type='text/html' id='update'>
+        <form class="layui-form myForm updateForm" lay-filter="editForm">
+            <input type="hidden" name='Id'>
+            <div class="layui-form-item">
+                <label class="layui-form-label">分类名称</label>
+                <div class="layui-input-block">
+                    <input type="text" name="name" required lay-verify="required|username" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">分类别名</label>
+                <div class="layui-input-block">
+                    <input type="text" name="alias" required lay-verify="required|username" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+
+                <div class="layui-input-block">
+                    <button lay-submit class="layui-btn btn-update">确认修改</button>
+                </div>
+            </div>
+        </form>
+
+
     </script>
     <script src="../assets/lib/jquery.js"></script>
     <script src="../assets/lib/layui/layui.all.js"></script>
