--- a/article/article_list.html
+++ b/article/article_list.html
@@ -5,10 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="../assets/css/article/article_list.css">
 </head>
 
 <body>
-    <h1>文章列表</h1>
+    <div class="layui-card">
+        <div class="layui-card-header">文章列表页面</div>
+        <div class="layui-card-body">
+            <form class="layui-form" action="">
+                <div class="layui-input-inline">
+
+                    <div class="layui-input-inline">
+                        <select name="city" id='category' lay-verify="required">
+                        <option value="">所有分类</option>
+                        <option value="0"></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                      </select>
+                    </div>
+                </div>
+                <div class="layui-input-inline">
+
+                    <div class="layui-input-inline">
+                        <select name="city" lay-verify="required">
+                        <option value="">所有状态</option>
+                        <option value="0">已发布</option>
+                        <option value="1">草稿</option>
+                      </select>
+                    </div>
+                </div>
+                <div class="layui-input-inline">
+                    <div class="layui-input-inline">
+                        <button type="button" class="layui-btn">筛选</button>
+                    </div>
+                </div>
+            </form>
+
+
+            <table class="layui-table">
+                <colgroup>
+                    <col>
+                    <col width="200">
+                    <col width="200">
+                    <col width="200">
+                    <col width="200">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>文章标题</th>
+                        <th>文章分类</th>
+                        <th>加入时间</th>
+                        <th>文章状态</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>贤心</td>
+                        <td>爱旅行</td>
+                        <td>2016-11-29</td>
+                        <td>已发布</td>
+                        <td>
+                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                            <button type="button" class="layui-btn  layui-btn-xs  layui-btn-danger">删除</button>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+            <div id="test1"></div>
+        </div>
+    </div>
+
+    <script type='text/html' id='article_list'>
+        <option value="">所有分类</option>
+        {{each data value}}
+        <option value="{{value.Id}}">{{value.name}}</option>
+        {{/each}}
+
+    </script>
+    <script src="../assets/lib/jquery.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/template-web.js"></script>
+    <script src="../assets/js/utils.js"></script>
+    <script src="../assets/js/article/article.list.js"></script>
 </body>
 
 </html>
