--- a/article/article_edit.html
+++ b/article/article_edit.html
@@ -7,14 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
     <link rel="stylesheet" href="../assets/lib/cropper/cropper.css">
-    <link rel="stylesheet" href="../assets/css/article/article_release.css">
+    <link rel="stylesheet" href="../assets/css/article/artical_edit.css">
 </head>
 
 <body>
     <div class="layui-card">
         <div class="layui-card-header">发表文章</div>
         <div class="layui-card-body">
-            <form class="layui-form myForm" action="">
+            <form class="layui-form myForm" lay-filter="myForm" action="">
+                <input type="hidden" name='Id'>
                 <div class="layui-form-item">
                     <label class="layui-form-label">文章标题</label>
                     <div class="layui-input-block">
@@ -87,7 +88,7 @@
     <script src="../assets/lib/tinymce/tinymce.min.js"></script>
     <script src="../assets/lib/tinymce/tinymce_setup.js"></script>
     <script src="../assets/js/utils.js"></script>
-    <script src="../assets/js/article/article.release.js"></script>
+    <script src="../assets/js/article/article_edit.js"></script>
 </body>
 
 </html>
