--- a/article/article_list.html
+++ b/article/article_list.html
@@ -13,7 +13,7 @@
     <div class="layui-card">
         <div class="layui-card-header">文章列表页面</div>
         <div class="layui-card-body">
-            <form class="layui-form" action="">
+            <form class="layui-form myForm" action="">
                 <div class="layui-input-inline">
 
                     <div class="layui-input-inline">
@@ -30,16 +30,16 @@
                 <div class="layui-input-inline">
 
                     <div class="layui-input-inline">
-                        <select name="city" lay-verify="required">
+                        <select name="city" id='state' lay-verify="required">
                         <option value="">所有状态</option>
-                        <option value="0">已发布</option>
-                        <option value="1">草稿</option>
+                        <option value="已发布">已发布</option>
+                        <option value="草稿">草稿</option>
                       </select>
                     </div>
                 </div>
                 <div class="layui-input-inline">
                     <div class="layui-input-inline">
-                        <button type="button" class="layui-btn">筛选</button>
+                        <button class="layui-btn">筛选</button>
                     </div>
                 </div>
             </form>
@@ -69,8 +69,8 @@
                         <td>2016-11-29</td>
                         <td>已发布</td>
                         <td>
-                            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                            <button type="button" class="layui-btn  layui-btn-xs  layui-btn-danger">删除</button>
+                            <button type="button" class="layui-btn layui-btn-xs btn-change">编辑</button>
+                            <button type="button" class="layui-btn  layui-btn-xs  layui-btn-danger btn-del">删除</button>
                         </td>
                     </tr>
 
@@ -87,6 +87,21 @@
         <option value="{{value.Id}}">{{value.name}}</option>
         {{/each}}
 
+    </script>
+
+    <script type='text/html' id='category_list'>
+        {{each data value index}}
+        <tr>
+            <td>{{value.title}}</td>
+            <td>{{value.cate_name}}</td>
+            <td>{{value.pub_date}}</td>
+            <td>{{value.state}}</td>
+            <td>
+                <a href='./article_edit.html?id={{value.Id}}' class="layui-btn layui-btn-xs btn-change">编辑</a>
+                <button type="button" data-id='{{value.Id}}' class="layui-btn  layui-btn-xs  layui-btn-danger btn-del">删除</button>
+            </td>
+        </tr>
+        {{/each}}
     </script>
     <script src="../assets/lib/jquery.js"></script>
     <script src="../assets/lib/layui/layui.all.js"></script>
